# eventsourcing_book

./: .env  .gitignore  Cargo.toml  LICENSE  README.md  docker-compose.yml  init_dev.sh
config/: base.yaml  development.yaml  production.yaml
migrations/: 2025030100000_schema.sql
src/: lib.rs  main.rs
src/domain/: events.rs  mod.rs
src/domain/cart/: add_item.rs  archive_item.rs  cart_items.rs  cart_items_from_db.rs  carts_with_products.rs  change_inventory.rs  change_price.rs  clear_cart.rs  errors.rs  ids.rs  inventories.rs  mod.rs  publish_cart.rs  remove_item.rs  submit_cart.rs
src/domain/helpers/: device_fingerprint_calculator.rs  fake.rs  kafka.rs  live_read_models.rs  macros.rs  mod.rs  stateless.rs
src/infra/: cli.rs  client_error.rs  config.rs  mod.rs
src/subsystems/: event_listeners.rs  kafka_listeners.rs  mod.rs  web_server.rs
src/subsystems/work_queue/: mod.rs  queue.rs  subsystem.rs  tasks.rs
tests/cart/: archive_item.rs  cart_items_from_db_reset.rs  change_price.rs  health_check.rs  inventories.rs  main.rs  test_utils.rs
